syntax = "proto3";

package product;

option go_package = "./pkg/product/pb";

service ProductService {
  rpc ShowAllProducts(ShowProductRequest) returns (ShowAllProductResponse) {};
  rpc AddProduct(AddProductRequest) returns (AddProductResponse) {};
  rpc GetGenreDetails(GenreRequest) returns (AllGenreResponse) {};
  rpc GetStudioDetails(StudioRequest) returns (AllStudioResponse) {};
  rpc DoesProductExist(ProductExistRequest) returns (ProductExistResponse) {};
  rpc GetProductNameFromID(ProductNameFromIDRequest) returns (ProductNameFromIDResponse) {};
  rpc GetProductPriceFromID(ProductPriceFromIDRequest) returns (ProductPriceFromIDResponse) {};
  rpc GetCartProductsNameFromID(ProductIDSRequest) returns (ProductNamesResponse) {};

}

message ProductIDS {
  int64 productid = 1;
}

message ProductIDSRequest {
  repeated ProductIDS allproductids = 1;
}

message ProductNameWithID {
  int64 productid = 1;
  string productname = 2;
}

message ProductNamesResponse {
  repeated ProductNameWithID productswithid = 1;
}

message ProductPriceFromIDRequest {
  int64 productid = 1;
}

message ProductPriceFromIDResponse {
  float price = 1;
}

message ProductExistRequest {
  int64 productid = 1;
} 

message ProductExistResponse {
  bool prouctexist = 2;
}

message ProductNameFromIDRequest {
  int64 productid = 1;
}

message ProductNameFromIDResponse {
  string productname = 1;
}

message GenreRequest {}

message GenreResponse {
  int64 genreid = 1;
  string genrename = 2;
}

message AllGenreResponse {
  repeated GenreResponse allgenres = 1;
}

message StudioRequest {}

message StudioResponse {
  int64 studioid = 1;
  string studioname = 2;
}

message AllStudioResponse {
  repeated StudioResponse allstudios = 1;
}

message ShowProductRequest {
  int64 page = 2;
  int64 count = 3;
}

message ShowProductResponse {
  int64 productid = 1;
  string moviename = 2;
  string sku = 3;
  string genre = 4;
  string language = 5;
  string price = 6;
  int64 quantity = 7;
}

message ShowAllProductResponse {
  repeated ShowProductResponse productsbrief = 1;
}

message AddProductRequest {
  string moviename = 1;
  int64 genreid = 2;
  string releaseyear = 3;
  string format = 4;
  string director = 5;
  string productdescription = 6;
  int64 runtime = 7;
  string language = 8;
  int64 studioid = 9;
  int64 quantity = 10;
  int64 price = 11;
}

message AddProductResponse {
  int64 status = 1;
}